--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@
           <button class="btn_login">ثبت نام | ورود</button>
         </div>
       </div>
+      <div class="page_intro">
+        <div class="container">
+          <div class="page_intro_right">
+            <h1>
+              فروشگاه آنلاین
+              <br />
+              شاپ رایان
+            </h1>
+            <div class="page_intro_right_btns">
+              <button class="page_intro_right_btn">دانلود اپلیکیشن</button>
+              <button class="page_intro_right_btn">فروشگاه</button>
+            </div>
+          </div>
+          <div class="page_intro_left">
+            <img src="assets/images/shop_intro.svg" alt="Shop Rayan" />
+          </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
