add section new products

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
           <button class="btn_login">ثبت نام | ورود</button>
         </div>
       </div>
+
       <div class="page_intro">
         <div class="container">
           <div class="page_intro_right">
@@ -42,6 +43,24 @@
             <img src="assets/images/shop_intro.svg" alt="Shop Rayan" />
           </div>
           <div class="clearfix"></div>
+        </div>
+      </div>
+
+      <div class="new_products">
+        <div class="container">
+          <h2 class="p_15">جدیدترین محصولات</h2>
+          <div class="new_product">
+            <div class="new_product_card"></div>
+          </div>
+          <div class="new_product">
+            <div class="new_product_card"></div>
+          </div>
+          <div class="new_product">
+            <div class="new_product_card"></div>
+          </div>
+          <div class="new_product">
+            <div class="new_product_card"></div>
+          </div>
         </div>
       </div>
     </div>
