responsive new products section

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Shop Rayan</title>
+    <title>Rayan Shop</title>
   </head>
   <body>
     <div class="main">
       <div class="header">
         <div class="container">
           <div class="header_logo">
-            <img src="assets/images/shop.png" alt="shop rayan" />
+            <img src="assets/images/shop.png" alt="Rayan Shop" />
           </div>
           <nav>
             <ul class="header_nav">
@@ -32,7 +32,7 @@
             <h1>
               فروشگاه آنلاین
               <br />
-              شاپ رایان
+              رایان شاپ
             </h1>
             <div class="page_intro_right_btns">
               <button class="page_intro_right_btn">دانلود اپلیکیشن</button>
@@ -40,7 +40,7 @@
             </div>
           </div>
           <div class="page_intro_left">
-            <img src="assets/images/shop_intro.svg" alt="Shop Rayan" />
+            <img src="assets/images/shop_intro.svg" alt="Rayan Shop" />
           </div>
           <div class="clearfix"></div>
         </div>
@@ -54,7 +54,7 @@
               <div class="new_product_img">
                 <img
                   src="assets/images/NewProducts/dress1.jpg"
-                  alt="Shop Rayan"
+                  alt="Rayan Shop"
                 />
               </div>
               <div class="new_product_body">
@@ -78,7 +78,7 @@
               <div class="new_product_img">
                 <img
                   src="assets/images/NewProducts/dress2.jpg"
-                  alt="Shop Rayan"
+                  alt="Rayan Shop"
                 />
               </div>
               <div class="new_product_body">
@@ -100,7 +100,7 @@
               <div class="new_product_img">
                 <img
                   src="assets/images/NewProducts/dress3.jpg"
-                  alt="Shop Rayan"
+                  alt="Rayan Shop"
                 />
               </div>
               <div class="new_product_body">
@@ -122,7 +122,7 @@
               <div class="new_product_img">
                 <img
                   src="assets/images/NewProducts/dress4.jpg"
-                  alt="Shop Rayan"
+                  alt="Rayan Shop"
                 />
               </div>
               <div class="new_product_body">
