--- a/index.html
+++ b/index.html
@@ -111,7 +111,9 @@
                 </div>
 
                 <div>
-                  <p class="new_product_description">مانتو بلند زنانه السانا مدل فلورانس کد 68601 رنگ مشکی</p>
+                  <p class="new_product_description">
+                    مانتو بلند زنانه السانا مدل فلورانس کد 68601 رنگ مشکی
+                  </p>
                   <p class="new_product_price_off">558.000 تومان</p>
                 </div>
               </div>
@@ -133,12 +135,182 @@
                 </div>
 
                 <div>
-                  <p class="new_product_description">ست تی شرت و شلوار پسرانه کد 1402031YL</p>
+                  <p class="new_product_description">
+                    ست تی شرت و شلوار پسرانه کد 1402031YL
+                  </p>
                   <p class="new_product_price_off">399.990 تومان</p>
                 </div>
               </div>
             </div>
           </div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+
+      <div class="main_ad">
+        <div class="container">
+          <div class="main_ad_right">
+            <img src="assets/images/ad/ad_right.jpg" alt="Rayan Shop" />
+          </div>
+
+          <div class="main_ad_left">
+            <img src="assets/images/ad/ad_left.jpg" alt="Rayan Shop" />
+          </div>
+
+          <div class="clearfix"></div>
+        </div>
+      </div>
+
+      <div class="most_sales">
+        <div class="container">
+          <h2 class="p_15">بیشترین تخفیفات</h2>
+
+          <div class="most_sales_item">
+            <div class="new_product_card">
+              <div class="new_product_img">
+                <img
+                  src="assets/images/NewProducts/dress1.jpg"
+                  alt="Rayan Shop"
+                />
+              </div>
+              <div class="new_product_body">
+                <div>
+                  <p class="new_product_title">پولوشرت آستین کوتاه</p>
+                  <p class="new_product_price">577.000 تومان</p>
+                  <div class="clearfix"></div>
+                </div>
+
+                <div>
+                  <p class="new_product_description">
+                    پولوشرت آستین کوتاه مردانه 1991 اس دبلیو مدل POL1912 NY
+                  </p>
+                  <p class="new_product_price_off">356.000 تومان</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="most_sales_item">
+            <div class="new_product_card">
+              <div class="new_product_img">
+                <img
+                  src="assets/images/NewProducts/dress2.jpg"
+                  alt="Rayan Shop"
+                />
+              </div>
+              <div class="new_product_body">
+                <div>
+                  <p class="new_product_title">شومیز زنانه</p>
+                  <p class="new_product_price">450.000 تومان</p>
+                  <div class="clearfix"></div>
+                </div>
+
+                <div>
+                  <p class="new_product_description">شومیز زنانه مدل AZ-s3</p>
+                  <p class="new_product_price_off">345.000 تومان</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="most_sales_item">
+            <div class="new_product_card">
+              <div class="new_product_img">
+                <img
+                  src="assets/images/NewProducts/dress3.jpg"
+                  alt="Rayan Shop"
+                />
+              </div>
+              <div class="new_product_body">
+                <div>
+                  <p class="new_product_title">مانتو بلند زنانه</p>
+                  <p class="new_product_price">700.000 تومان</p>
+                  <div class="clearfix"></div>
+                </div>
+
+                <div>
+                  <p class="new_product_description">
+                    مانتو بلند زنانه السانا مدل فلورانس کد 68601 رنگ مشکی
+                  </p>
+                  <p class="new_product_price_off">558.000 تومان</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="most_sales_item">
+            <div class="new_product_card">
+              <div class="new_product_img">
+                <img
+                  src="assets/images/NewProducts/dress4.jpg"
+                  alt="Rayan Shop"
+                />
+              </div>
+              <div class="new_product_body">
+                <div>
+                  <p class="new_product_title">ست تی شرت و شلوار</p>
+                  <p class="new_product_price">800.000 تومان</p>
+                  <div class="clearfix"></div>
+                </div>
+
+                <div>
+                  <p class="new_product_description">
+                    ست تی شرت و شلوار پسرانه کد 1402031YL
+                  </p>
+                  <p class="new_product_price_off">399.990 تومان</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="most_sales_item">
+            <div class="new_product_card">
+              <div class="new_product_img">
+                <img
+                  src="assets/images/NewProducts/dress1.jpg"
+                  alt="Rayan Shop"
+                />
+              </div>
+              <div class="new_product_body">
+                <div>
+                  <p class="new_product_title">پولوشرت آستین کوتاه</p>
+                  <p class="new_product_price">577.000 تومان</p>
+                  <div class="clearfix"></div>
+                </div>
+
+                <div>
+                  <p class="new_product_description">
+                    پولوشرت آستین کوتاه مردانه 1991 اس دبلیو مدل POL1912 NY
+                  </p>
+                  <p class="new_product_price_off">356.000 تومان</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="most_sales_item">
+            <div class="new_product_card">
+              <div class="new_product_img">
+                <img
+                  src="assets/images/NewProducts/dress2.jpg"
+                  alt="Rayan Shop"
+                />
+              </div>
+              <div class="new_product_body">
+                <div>
+                  <p class="new_product_title">شومیز زنانه</p>
+                  <p class="new_product_price">450.000 تومان</p>
+                  <div class="clearfix"></div>
+                </div>
+
+                <div>
+                  <p class="new_product_description">شومیز زنانه مدل AZ-s3</p>
+                  <p class="new_product_price_off">345.000 تومان</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="clearfix"></div>
         </div>
       </div>
     </div>
